@@ -15,6 +15,7 @@ include \$(_cdbs_package_root_dir)/1/class/ant.mk.in
 
 DEB_CLASSPATH := /tmp/nothing.jar:\$(DEB_CLASSPATH)
 JAVA_HOME_DIRS = /var/tmp/ /usr/lib/kaffe/
+JAVACMD += -Dfoo=bar
 EOF
 chmod +x $WORKDIR/debian/rules
 
